content flicker fix

--- a/bottomsheet.css
+++ b/bottomsheet.css
@@ -9,6 +9,7 @@
    /* z-index: 999; */
    left:0;
    top: 0;
+   opacity: 0;
    transform: unset;
    box-shadow: 0 1px 37px 0 rgb(0 0 0 / 14%);
    /* border-top-left-radius: 36px;
